tests/negative/Package/PackageJuvixNoPackageSymbol/Package.juvix
module Package;

import Stdlib.Prelude open;
import PackageDescription.V1 open;

abc : Nat := 1;
